--- a/assets/css/styless.css
+++ b/assets/css/styless.css
@@ -8,7 +8,7 @@ body {
 
 }
 main {
-    background-image: url(/assets/img/pokemon.jpg);
+    background-image: url(/assets/css/img/pokemon.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -55,3 +55,25 @@ main {
     font-size: 20px;
     color: white;
 }
+
+.conteudo {
+    width: 100%;
+    height: 95vh;
+    display: flex;
+    align-items: center;
+    padding: 0 8%;
+    color: white;
+}
+
+.conteudo {
+    max-width: 550px;
+}
+
+.conteudo h1 {
+    font-family: 'Luckiest Guy', cursive;
+    font-size: 95px;
+    line-height: 90px;
+    margin-bottom: 250px;
+    
+}
+
