footer do css finalizado

--- a/assets/css/styless.css
+++ b/assets/css/styless.css
@@ -77,3 +77,12 @@ main {
     
 }
 
+footer {
+    width: 100%;
+    background: #111;
+    color: white;
+    padding: 20px 0;
+    text-align: center;
+    font-size: 15px;
+    margin-top: 0;
+}
