--- a/assets/css/poison.css
+++ b/assets/css/poison.css
@@ -58,10 +58,7 @@ body {
     padding: 15px 25px;
     font-size: 18px;
     border-radius: 20px;
-    cursor: pointer;
-    font-weight: bold;
-    transition: .2s;
-    color: rgba(245, 251, 255, 0.545);
+    color: #ffffff81;
 }
 
 .navegacao button{ 
