--- a/assets/css/fairy.css
+++ b/assets/css/fairy.css
@@ -151,6 +151,17 @@ h1 {
 .abilities p {
     margin: 3px 0;
 }
+
+footer {
+    width: 100%;
+    background: #111;
+    color: white;
+    padding: 20px 0;
+    text-align: center;
+    font-size: 15px;
+    margin-top: 0;
+}
+
 @media (max-width: 980px) {
     .navegacao {
         gap: 15px;
