--- a/assets/css/dark.css
+++ b/assets/css/dark.css
@@ -131,6 +131,17 @@ h1 {
     margin-top: 10px;
     font-size: 13px;
 }
+
+footer {
+    width: 100%;
+    background: #111;
+    color: white;
+    padding: 20px 0;
+    text-align: center;
+    font-size: 15px;
+    margin-top: 0;
+}
+
 @media (max-width: 980px) {
     .navegacao {
         gap: 15px;
