--- a/assets/css/poison.css
+++ b/assets/css/poison.css
@@ -129,6 +129,16 @@ h1 {
     font-size: 13px;
 }
 
+footer {
+    width: 100%;
+    background: #111;
+    color: white;
+    padding: 20px 0;
+    text-align: center;
+    font-size: 15px;
+    margin-top: 0;
+}
+
 @media (max-width: 980px) {
     .navegacao {
         gap: 15px;
